[gd_scene load_steps=13 format=2]

[ext_resource path="res://areas/main.gd" type="Script" id=1]
[ext_resource path="res://HUD/HUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://areas/Maze01v2.tscn" type="PackedScene" id=3]
[ext_resource path="res://areas/Portail.tscn" type="PackedScene" id=4]
[ext_resource path="res://player/player2.tscn" type="PackedScene" id=5]
[ext_resource path="res://player/etoileTouch.tscn" type="PackedScene" id=6]
[ext_resource path="res://items/codexv2.tscn" type="PackedScene" id=7]
[ext_resource path="res://items/baguettev2.tscn" type="PackedScene" id=8]
[ext_resource path="res://items/etoile.tscn" type="PackedScene" id=9]
[ext_resource path="res://player/caramelBoss.tscn" type="PackedScene" id=10]
[ext_resource path="res://areas/controlSlimes.gd" type="Script" id=11]
[ext_resource path="res://enemies/Slime.tscn" type="PackedScene" id=12]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="HUD" parent="." instance=ExtResource( 2 )]

[node name="Maze1v2" parent="." instance=ExtResource( 3 )]

[node name="BackgroundStaticObjects" type="Node2D" parent="."]

[node name="Entree" type="Node2D" parent="BackgroundStaticObjects"]

[node name="PortailA" parent="BackgroundStaticObjects/Entree" instance=ExtResource( 4 )]
position = Vector2( 2367.38, 655.518 )
world_scene = "res://areas/ZoneFinale.tscn"

[node name="Player2" parent="." groups=[
"Players",
] instance=ExtResource( 5 )]
position = Vector2( 1550.39, 1859.62 )
scale = Vector2( 0.7, 0.7 )
z_index = 1

[node name="etoileTouch" parent="Player2" instance=ExtResource( 6 )]
visible = false
position = Vector2( 53.5247, -4.65431 )

[node name="Camera2D2" type="Camera2D" parent="Player2"]
position = Vector2( -1.87671, 0.820801 )
current = true
zoom = Vector2( 0.7, 0.7 )
drag_margin_h_enabled = false
drag_margin_v_enabled = false
smoothing_enabled = true
drag_margin_left = 0.1
drag_margin_top = 0.1
drag_margin_right = 0.1
drag_margin_bottom = 0.1

[node name="codexv2" parent="." instance=ExtResource( 7 )]
position = Vector2( 336.401, 2026.13 )
scale = Vector2( 0.7, 0.7 )

[node name="baguette2" parent="." instance=ExtResource( 8 )]
position = Vector2( 82.7201, 143.871 )

[node name="etoile" parent="." instance=ExtResource( 9 )]
position = Vector2( 2860.03, 496.213 )

[node name="etoile6" parent="." instance=ExtResource( 9 )]
position = Vector2( 3638.26, 1345.97 )

[node name="etoile2" parent="." instance=ExtResource( 9 )]
position = Vector2( 1393.34, 1387.96 )

[node name="etoile3" parent="." instance=ExtResource( 9 )]
position = Vector2( -132.864, 1368.79 )

[node name="etoile7" parent="." instance=ExtResource( 9 )]
position = Vector2( 2834.09, 454.866 )

[node name="etoile8" parent="." instance=ExtResource( 9 )]
position = Vector2( 3646.68, 708.212 )

[node name="etoile9" parent="." instance=ExtResource( 9 )]
position = Vector2( 4038.89, 282.216 )

[node name="etoile10" parent="." instance=ExtResource( 9 )]
position = Vector2( 4153.37, 415.457 )

[node name="etoile4" parent="." instance=ExtResource( 9 )]
position = Vector2( 909.525, 1104.36 )

[node name="etoile5" parent="." instance=ExtResource( 9 )]
position = Vector2( 1920.51, 443.602 )
z_index = 4

[node name="caramelBoss" parent="." instance=ExtResource( 10 )]
position = Vector2( 2483.71, 728.477 )
scale = Vector2( 0.7, 0.7 )

[node name="controlSlimes" type="Node2D" parent="." groups=[
"Slimes",
]]
position = Vector2( -28.9644, 60.5821 )
scale = Vector2( 0.7, 0.7 )
script = ExtResource( 11 )

[node name="Slime" parent="controlSlimes" instance=ExtResource( 12 )]
position = Vector2( 690.7, 382.678 )
scale = Vector2( 1.14286, 1.14286 )

[node name="Slime2" parent="controlSlimes" instance=ExtResource( 12 )]
position = Vector2( 2871.73, 1107 )
scale = Vector2( 1.14286, 1.14286 )

[node name="Slime3" parent="controlSlimes" instance=ExtResource( 12 )]
position = Vector2( 2370.37, 412.259 )
scale = Vector2( 1.14286, 1.14286 )

[node name="Slime4" parent="controlSlimes" instance=ExtResource( 12 )]
position = Vector2( 1709.67, 545.681 )
scale = Vector2( 1.14286, 1.14286 )

[node name="Slime5" parent="controlSlimes" instance=ExtResource( 12 )]
position = Vector2( 369.346, 2791.36 )
scale = Vector2( 1.14286, 1.14286 )

[node name="Slime6" parent="controlSlimes" instance=ExtResource( 12 )]
position = Vector2( 1211.27, 1104.88 )
scale = Vector2( 1.14286, 1.14286 )

[node name="Slime7" parent="controlSlimes" instance=ExtResource( 12 )]
position = Vector2( 363.045, 2844.92 )
scale = Vector2( 1.14286, 1.14286 )

[node name="Slime8" parent="controlSlimes" instance=ExtResource( 12 )]
position = Vector2( 3603.66, 2498.61 )
scale = Vector2( 1.14286, 1.14286 )

[node name="Slime9" parent="controlSlimes" instance=ExtResource( 12 )]
position = Vector2( 3898.64, 2804.33 )
scale = Vector2( 1.14286, 1.14286 )

[node name="Slime10" parent="controlSlimes" instance=ExtResource( 12 )]
position = Vector2( 3842.02, 2612.79 )
scale = Vector2( 1.14286, 1.14286 )

[node name="Slime11" parent="controlSlimes" instance=ExtResource( 12 )]
position = Vector2( 3402.78, 2843.84 )
scale = Vector2( 1.14286, 1.14286 )

[node name="Slime12" parent="controlSlimes" instance=ExtResource( 12 )]
position = Vector2( 3686.71, 101.058 )
scale = Vector2( 1.14286, 1.14286 )

[node name="Slime13" parent="controlSlimes" instance=ExtResource( 12 )]
position = Vector2( 1171.07, 1486.65 )
scale = Vector2( 1.14286, 1.14286 )

[node name="Slime14" parent="controlSlimes" instance=ExtResource( 12 )]
position = Vector2( 1875.22, 1719.47 )
scale = Vector2( 1.14286, 1.14286 )

[node name="Slime15" parent="controlSlimes" instance=ExtResource( 12 )]
position = Vector2( 3022.31, 1674.04 )
scale = Vector2( 1.14286, 1.14286 )

[node name="Slime16" parent="controlSlimes" instance=ExtResource( 12 )]
position = Vector2( 2255.69, 2690.52 )
scale = Vector2( 1.14286, 1.14286 )

[node name="Slime17" parent="controlSlimes" instance=ExtResource( 12 )]
position = Vector2( -196.841, 1835.71 )
scale = Vector2( 1.14286, 1.14286 )

[node name="Slime18" parent="controlSlimes" instance=ExtResource( 12 )]
position = Vector2( -249.827, 1915.19 )
scale = Vector2( 1.14286, 1.14286 )

[node name="Slime19" parent="controlSlimes" instance=ExtResource( 12 )]
position = Vector2( 2314.36, 2532.08 )
scale = Vector2( 1.14286, 1.14286 )

[node name="Slime20" parent="controlSlimes" instance=ExtResource( 12 )]
position = Vector2( 3270.02, 2187.08 )
scale = Vector2( 1.14286, 1.14286 )

[node name="Slime29" parent="controlSlimes" instance=ExtResource( 12 )]
position = Vector2( 5240.12, 1913.22 )
scale = Vector2( 1.14286, 1.14286 )

[node name="Slime30" parent="controlSlimes" instance=ExtResource( 12 )]
position = Vector2( 6049.42, 543.958 )
scale = Vector2( 1.14286, 1.14286 )

[node name="Slime31" parent="controlSlimes" instance=ExtResource( 12 )]
position = Vector2( 5783.74, 343.677 )
scale = Vector2( 1.14286, 1.14286 )

[node name="Slime32" parent="controlSlimes" instance=ExtResource( 12 )]
position = Vector2( 6525.77, 2302.4 )
scale = Vector2( 1.14286, 1.14286 )

[node name="Slime33" parent="controlSlimes" instance=ExtResource( 12 )]
position = Vector2( 6525.77, 1314.86 )
scale = Vector2( 1.14286, 1.14286 )

[node name="Slime35" parent="controlSlimes" instance=ExtResource( 12 )]
position = Vector2( 5707.36, 2602.48 )
scale = Vector2( 1.14286, 1.14286 )

[node name="Slime36" parent="controlSlimes" instance=ExtResource( 12 )]
position = Vector2( 6165.67, 2968.04 )
scale = Vector2( 1.14286, 1.14286 )

[node name="Slime37" parent="controlSlimes" instance=ExtResource( 12 )]
position = Vector2( 6012.9, 1391.24 )
scale = Vector2( 1.14286, 1.14286 )

[node name="Slime34" parent="controlSlimes" instance=ExtResource( 12 )]
position = Vector2( 6252.96, -114.631 )
scale = Vector2( 1.14286, 1.14286 )

[node name="Slime22" parent="controlSlimes" instance=ExtResource( 12 )]
position = Vector2( 3630.37, 2098.22 )
scale = Vector2( 1.14286, 1.14286 )

[node name="Slime21" parent="controlSlimes" instance=ExtResource( 12 )]
position = Vector2( 3064.31, 1842.07 )
scale = Vector2( 1.14286, 1.14286 )

[node name="Slime23" parent="controlSlimes" instance=ExtResource( 12 )]
position = Vector2( 4742.67, 706.702 )
scale = Vector2( 1.14286, 1.14286 )

[node name="Slime24" parent="controlSlimes" instance=ExtResource( 12 )]
position = Vector2( 4939.72, 764.239 )
scale = Vector2( 1.14286, 1.14286 )

[node name="Slime25" parent="controlSlimes" instance=ExtResource( 12 )]
position = Vector2( 4858.54, 1099.22 )
scale = Vector2( 1.14286, 1.14286 )

[node name="Slime26" parent="controlSlimes" instance=ExtResource( 12 )]
position = Vector2( 4934.2, 1370.35 )
scale = Vector2( 1.14286, 1.14286 )

[node name="Slime27" parent="controlSlimes" instance=ExtResource( 12 )]
position = Vector2( 4858.54, 1670.64 )
scale = Vector2( 1.14286, 1.14286 )

[node name="Slime28" parent="controlSlimes" instance=ExtResource( 12 )]
position = Vector2( 4846.71, 1907.89 )
scale = Vector2( 1.14286, 1.14286 )
[connection signal="pushed" from="Player2" to="." method="_on_Player2_pushed"]
[connection signal="hit" from="codexv2" to="." method="_on_codexv2_hit"]
[connection signal="hit" from="baguette2" to="." method="_on_baguette2_hit"]
[connection signal="hit" from="etoile" to="." method="_on_etoile_hit"]
[connection signal="hit" from="etoile6" to="." method="_on_etoile_hit"]
[connection signal="hit" from="etoile2" to="." method="_on_etoile2_hit"]
[connection signal="hit" from="etoile3" to="." method="_on_etoile3_hit"]
[connection signal="hit" from="etoile7" to="." method="_on_etoile3_hit"]
[connection signal="hit" from="etoile8" to="." method="_on_etoile3_hit"]
[connection signal="hit" from="etoile9" to="." method="_on_etoile3_hit"]
[connection signal="hit" from="etoile10" to="." method="_on_etoile3_hit"]
[connection signal="hit" from="etoile4" to="." method="_on_etoile4_hit"]
[connection signal="hit" from="etoile5" to="." method="_on_etoile5_hit"]
[connection signal="body_entered" from="caramelBoss" to="." method="_on_caramelBoss_body_entered"]
[connection signal="body_exited" from="caramelBoss" to="." method="_on_caramelBoss_body_exited"]
[connection signal="touched" from="controlSlimes/Slime" to="controlSlimes" method="_on_Slime_touched"]
[connection signal="touched" from="controlSlimes/Slime2" to="controlSlimes" method="_on_Slime2_touched"]
[connection signal="touched" from="controlSlimes/Slime3" to="controlSlimes" method="_on_Slime3_touched"]
[connection signal="touched" from="controlSlimes/Slime4" to="controlSlimes" method="_on_Slime4_touched"]
[connection signal="touched" from="controlSlimes/Slime5" to="controlSlimes" method="_on_Slime5_touched"]
[connection signal="touched" from="controlSlimes/Slime6" to="controlSlimes" method="_on_Slime6_touched"]
[connection signal="touched" from="controlSlimes/Slime7" to="controlSlimes" method="_on_Slime7_touched"]
[connection signal="touched" from="controlSlimes/Slime8" to="controlSlimes" method="_on_Slime8_touched"]
[connection signal="touched" from="controlSlimes/Slime9" to="controlSlimes" method="_on_Slime9_touched"]
[connection signal="touched" from="controlSlimes/Slime10" to="controlSlimes" method="_on_Slime10_touched"]
[connection signal="touched" from="controlSlimes/Slime11" to="controlSlimes" method="_on_Slime11_touched"]
[connection signal="touched" from="controlSlimes/Slime12" to="controlSlimes" method="_on_Slime12_touched"]
[connection signal="touched" from="controlSlimes/Slime13" to="controlSlimes" method="_on_Slime13_touched"]
[connection signal="touched" from="controlSlimes/Slime14" to="controlSlimes" method="_on_Slime14_touched"]
[connection signal="touched" from="controlSlimes/Slime15" to="controlSlimes" method="_on_Slime15_touched"]
[connection signal="touched" from="controlSlimes/Slime16" to="controlSlimes" method="_on_Slime16_touched"]
[connection signal="touched" from="controlSlimes/Slime17" to="controlSlimes" method="_on_Slime17_touched"]
[connection signal="touched" from="controlSlimes/Slime18" to="controlSlimes" method="_on_Slime18_touched"]
[connection signal="touched" from="controlSlimes/Slime19" to="controlSlimes" method="_on_Slime18_touched"]
[connection signal="touched" from="controlSlimes/Slime20" to="controlSlimes" method="_on_Slime18_touched"]
[connection signal="touched" from="controlSlimes/Slime29" to="controlSlimes" method="_on_Slime18_touched"]
[connection signal="touched" from="controlSlimes/Slime30" to="controlSlimes" method="_on_Slime18_touched"]
[connection signal="touched" from="controlSlimes/Slime31" to="controlSlimes" method="_on_Slime18_touched"]
[connection signal="touched" from="controlSlimes/Slime32" to="controlSlimes" method="_on_Slime18_touched"]
[connection signal="touched" from="controlSlimes/Slime33" to="controlSlimes" method="_on_Slime18_touched"]
[connection signal="touched" from="controlSlimes/Slime35" to="controlSlimes" method="_on_Slime18_touched"]
[connection signal="touched" from="controlSlimes/Slime36" to="controlSlimes" method="_on_Slime18_touched"]
[connection signal="touched" from="controlSlimes/Slime37" to="controlSlimes" method="_on_Slime18_touched"]
[connection signal="touched" from="controlSlimes/Slime34" to="controlSlimes" method="_on_Slime18_touched"]
[connection signal="touched" from="controlSlimes/Slime22" to="controlSlimes" method="_on_Slime18_touched"]
[connection signal="touched" from="controlSlimes/Slime21" to="controlSlimes" method="_on_Slime18_touched"]
[connection signal="touched" from="controlSlimes/Slime23" to="controlSlimes" method="_on_Slime18_touched"]
[connection signal="touched" from="controlSlimes/Slime24" to="controlSlimes" method="_on_Slime18_touched"]
[connection signal="touched" from="controlSlimes/Slime25" to="controlSlimes" method="_on_Slime18_touched"]
[connection signal="touched" from="controlSlimes/Slime26" to="controlSlimes" method="_on_Slime18_touched"]
[connection signal="touched" from="controlSlimes/Slime27" to="controlSlimes" method="_on_Slime18_touched"]
[connection signal="touched" from="controlSlimes/Slime28" to="controlSlimes" method="_on_Slime18_touched"]
